# game_of_life

./: .gitignore  CMakeCache.txt  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  README.md  cmake_install.cmake  cpu_util.txt  perf.data  perf_log.txt
resources/: bloom.fs  grid_shader.fs
src/: camera.cpp  game  game.cpp  helper.cpp  main.cpp  rendering.cpp  screens.cpp  start_screen.cpp  variables.hpp
